--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-Flask==2.2.2
+Flask==2.1.3
 numpy==1.23.1
-pandas==1.4.4
-# cmake==3.24.1.1
+pandas==1.4.3
 dlib==19.24.0
-# opencv_python==4.6.0.66
+gevent==21.8.0
 face_recognition==1.3.0
